tests/misc/errors/css/__snapshots__/jsfmt.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`less-syntax.css error test 1`] = `
"CssSyntaxError: Unknown word (1:4)
> 1 | a {.bordered();}
    |    ^
  2 | "
`;

exports[`scss-syntax.css error test 1`] = `
"CssSyntaxError: Unknown word (1:15)
> 1 | a {content: #{$foo}}
    |               ^
  2 | "
`;
